# JacobiAlg_cpp

./: .gitignore  CMakeLists.txt  jacobi.cpp  jacobi.h  main  main.cpp  run.sh
.cache/clangd/index/: jacobi.cpp.7A272F98C8F08C1A.idx  jacobi.h.3201BA82264085F0.idx  main.cpp.0BA1EAD8831DEFE0.idx
